tests/snapshots/yaml__yaml_cst_suite_D9TU.snap
---
source: tests/yaml.rs
expression: snapshot_json
---
{
  "case_id": "D9TU",
  "cst": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "kind": "YAML_KEY",
                        "range": {
                          "end": 3,
                          "start": 0
                        },
                        "text": "foo"
                      },
                      {
                        "kind": "YAML_COLON",
                        "range": {
                          "end": 4,
                          "start": 3
                        },
                        "text": ":"
                      }
                    ],
                    "kind": "YAML_BLOCK_MAP_KEY",
                    "range": {
                      "end": 4,
                      "start": 0
                    }
                  },
                  {
                    "children": [
                      {
                        "kind": "WHITESPACE",
                        "range": {
                          "end": 5,
                          "start": 4
                        },
                        "text": " "
                      },
                      {
                        "kind": "YAML_SCALAR",
                        "range": {
                          "end": 8,
                          "start": 5
                        },
                        "text": "bar"
                      }
                    ],
                    "kind": "YAML_BLOCK_MAP_VALUE",
                    "range": {
                      "end": 8,
                      "start": 4
                    }
                  }
                ],
                "kind": "YAML_BLOCK_MAP_ENTRY",
                "range": {
                  "end": 8,
                  "start": 0
                }
              }
            ],
            "kind": "YAML_BLOCK_MAP",
            "range": {
              "end": 8,
              "start": 0
            }
          }
        ],
        "kind": "YAML_METADATA_CONTENT",
        "range": {
          "end": 8,
          "start": 0
        }
      }
    ],
    "kind": "DOCUMENT",
    "range": {
      "end": 8,
      "start": 0
    }
  },
  "input": "foo: bar\n",
  "normalized": "foo: bar"
}
