tests/snapshots/yaml__yaml_cst_suite_E76Z.snap
---
source: tests/yaml.rs
expression: snapshot_json
---
{
  "case_id": "E76Z",
  "cst": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "kind": "YAML_KEY",
                        "range": {
                          "end": 4,
                          "start": 0
                        },
                        "text": "&a a"
                      },
                      {
                        "kind": "YAML_COLON",
                        "range": {
                          "end": 5,
                          "start": 4
                        },
                        "text": ":"
                      }
                    ],
                    "kind": "YAML_BLOCK_MAP_KEY",
                    "range": {
                      "end": 5,
                      "start": 0
                    }
                  },
                  {
                    "children": [
                      {
                        "kind": "WHITESPACE",
                        "range": {
                          "end": 6,
                          "start": 5
                        },
                        "text": " "
                      },
                      {
                        "kind": "YAML_SCALAR",
                        "range": {
                          "end": 10,
                          "start": 6
                        },
                        "text": "&b b"
                      }
                    ],
                    "kind": "YAML_BLOCK_MAP_VALUE",
                    "range": {
                      "end": 10,
                      "start": 5
                    }
                  },
                  {
                    "kind": "NEWLINE",
                    "range": {
                      "end": 11,
                      "start": 10
                    },
                    "text": "\n"
                  }
                ],
                "kind": "YAML_BLOCK_MAP_ENTRY",
                "range": {
                  "end": 11,
                  "start": 0
                }
              },
              {
                "children": [
                  {
                    "children": [
                      {
                        "kind": "YAML_KEY",
                        "range": {
                          "end": 14,
                          "start": 11
                        },
                        "text": "*b "
                      },
                      {
                        "kind": "YAML_COLON",
                        "range": {
                          "end": 15,
                          "start": 14
                        },
                        "text": ":"
                      }
                    ],
                    "kind": "YAML_BLOCK_MAP_KEY",
                    "range": {
                      "end": 15,
                      "start": 11
                    }
                  },
                  {
                    "children": [
                      {
                        "kind": "WHITESPACE",
                        "range": {
                          "end": 16,
                          "start": 15
                        },
                        "text": " "
                      },
                      {
                        "kind": "YAML_SCALAR",
                        "range": {
                          "end": 18,
                          "start": 16
                        },
                        "text": "*a"
                      }
                    ],
                    "kind": "YAML_BLOCK_MAP_VALUE",
                    "range": {
                      "end": 18,
                      "start": 15
                    }
                  },
                  {
                    "kind": "NEWLINE",
                    "range": {
                      "end": 19,
                      "start": 18
                    },
                    "text": "\n"
                  }
                ],
                "kind": "YAML_BLOCK_MAP_ENTRY",
                "range": {
                  "end": 19,
                  "start": 11
                }
              }
            ],
            "kind": "YAML_BLOCK_MAP",
            "range": {
              "end": 19,
              "start": 0
            }
          }
        ],
        "kind": "YAML_METADATA_CONTENT",
        "range": {
          "end": 19,
          "start": 0
        }
      }
    ],
    "kind": "DOCUMENT",
    "range": {
      "end": 19,
      "start": 0
    }
  },
  "input": "&a a: &b b\n*b : *a\n"
}
